# wrkn

./: Cargo.toml  LICENSE  README.md  bacon.toml
proptest-regressions/: wrkn.txt
src/: cli.rs  config.rs  doing.rs  file.rs  lib.rs  main.rs  parser.rs  wrkn.rs
src/cli/: locate.rs  now.rs  open.rs  recent.rs
src/wrkn/: parser.rs
tests/: integration_tests.rs  sample_file
