[package]
name = "wrkn"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Cooper"]
license = "MIT"


[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["std", "clock"] }
clap = { version = "4.3.9", features = ["derive", "cargo", "env", "unicode"] }
color-eyre = "0.6.2"
nom = "7.1.3"

[[bin]]
name = "importer"

[dev-dependencies]
pretty_assertions = "1.3.0"
proptest = "1.2.0"
testresult = "0.3.0"
