[package]
name = "wrkn"
version = "0.7.0"
edition = "2021"
authors = ["Joseph Cooper"]
license = "MIT"
default-run = "wrkn"
description = "Tool to save and retrieve quick reminders of what I've been working on"
homepage = "https://github.com/grodin/wrkn"
repository = "https://github.com/grodin/wrkn"

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["std", "clock"] }
chrono-humanize = "0.2.2"
clap = { version = "4.3.9", features = ["derive", "cargo", "env", "unicode"] }
color-eyre = "0.6.2"
directories = "6.0.0"
edit = "0.1.4"
itertools = "0.14.0"
nom = "8.0.0"
once_cell = "1.18.0"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
testresult = "0.3.0"
fake = { version = "2.6.1", features = ["chrono", "rand_core"] }
proptest = "1.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
assert_cmd = { version = "2.0.13", default-features = false }
assert_fs = { version = "1.1.1", default-features = false }
predicates = { version = "3.1.0", default-features = false }
